# Platform-Shooter

./: CMakeLists.txt  README.md
src/: Game.cpp  Game.h  GameState.cpp  GameState.h  Main.cpp  STATE.CPP  State.cpp  State.h  includes.h
src/entities/: Bullet.cpp  Bullet.h  Player.cpp  Player.h
src/level/: Background.h  Platform.cpp  Platform.h
src/states/: GameState.cpp  GameState.h  MainMenuState.cpp  MainMenuState.h
